--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -6,13 +6,13 @@
         background-color: transparent;
         z-index: 100;
         transition: top 0.3s ease-in-out;
-        max-width: 100%;
+        max-width: 100vw;
       }
       .outerNav {
         width: 100vw;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         justify-content: center;
       }
@@ -98,15 +98,6 @@
       font-size: 1rem;
     }
 
-    /* #navbar-container {
-      position: sticky;
-      top: 0;
-      background-color:transparent;
-      z-index: 100;
-      transition: transform 0.3s ease-in-out;
-    } */
-    
-    /* Optional class for hiding the navbar on scroll down */
     .navbar-hidden {
       transform: translateY(-100%);
     }
@@ -304,13 +295,12 @@
       /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
       color: white;
     }
+
     .logo1 {
       filter: invert(92%) sepia(99%) saturate(561%) hue-rotate(197deg) brightness(100%) contrast(98%);    }
     .logo1 img {
       height: 3.5vh;
     }
-
-  
       .logo2 {
         filter: invert(85%) sepia(33%) saturate(6047%) hue-rotate(165deg) brightness(104%) contrast(84%);      color: var(--header-main);
       height: 3.5vh;
@@ -356,10 +346,10 @@
       align-items: center;
       height: 100%;
       padding: 0;
-      margin-right: 10vw;
       width: 20vw;
       z-index: 100;
     }
+
     
     @media screen and (max-width: 1200px)
     {
@@ -377,14 +367,10 @@
       height: 8vw;
   
     }
-   
     #navbar-title {
       font-size: 1.5rem;
         left:30%;
       }
-/* #profileicon{
-  margin-right: 4vh;
-} */
     }
  
 
