--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -3,6 +3,7 @@
   height: 90vh;
   width: 100vw;
   margin: 0;
+  padding: 0;
   margin-top: -10vh;
   background-color:var(--background-offwhite);
   display: flex;
@@ -12,13 +13,19 @@
   color: #000;
   
 }
+html {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
 
 .maindashboard {
   display: flex;
   justify-content: center; /* Horizontally center the content */
   align-items: flex-start; /* Vertically center the content */
   height: 90vh; /* Adjust the height as needed */
-  width:80vw;
+  width:100%;
   margin: 0;
 }
 
