--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -6,10 +6,10 @@
         background-color: transparent;
         z-index: 100;
         transition: top 0.3s ease-in-out;
-        max-width: 100vw;
+        width: 100vw;
       }
       .outerNav {
-        width: 100vw;
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
