--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -42,9 +42,9 @@
 
 .wave-img {
     position: absolute;
-    bottom: 50;
+    bottom:45vh;
     left: 50;
-    height: 10rem;
+    height: 8rem;
     rotate: -2deg;
     width: 30rem;
     margin: 0;
@@ -147,8 +147,9 @@
         width: 50vw;
     }
     .wave-img {
-        top: 18rem;
+        top:37vh;
         width: 20rem;
+        height: 18vh;
     }
    .background-float-img {
         height: 30vh;
@@ -230,6 +231,12 @@
     width: 70vw;
 }
 
+.get-started p {
+
+    font-size: 1.1rem;
+    width: 70%;
+}
+
 }
 
 @media screen and (max-width: 375px) {
@@ -242,7 +249,7 @@
         display: none;
     }
 
-    .wave-img {
+    /* .wave-img {
         height: 20rem;
         width:18rem;
         top: 11rem;
@@ -250,7 +257,7 @@
         padding: 0;
         z-index: 0;
         filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
-    }
+    } */
 
     .info-box {
         width: 60vw;
@@ -291,7 +298,7 @@
         width: 80%;
     }
 
-    .wave-img {
+    /* .wave-img {
         height: 20rem;
         width: 15rem;
         top: 11rem;
@@ -299,7 +306,7 @@
         padding: 0;
         z-index: 0;
         filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
-    }
+    } */
 
  
 }
