--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -679,9 +679,10 @@ font-size: 3rem;
   }
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 425px) {
  html, body {
   width: 100%;
+  margin: 0;
  }
 
  .landing-main-Info  h1 {
@@ -699,9 +700,9 @@ font-size: 3rem;
   }
   .keepscrollimg {
     position: absolute;
-    top:50vh;
-    left: 0vw;
-    width:100vw;
+    left: auto;
+    top:46.5vh;
+    width:90vw;
     margin-top: 2vh;
     z-index: 100;
     max-width: 100%;
@@ -722,7 +723,7 @@ font-size: 3rem;
     font-size: 1rem;
   }
   .landing-section-1-info h1 {
-    width: 70vw;
+    width: 75vw;
     font-size: 1.8rem;
   
   }
@@ -797,7 +798,7 @@ font-size: 3rem;
   border-radius: 17.4rem;
 }
  .tcs {
-  width: 80vw;
+  width: 70vw;
   margin-left: 15vw;
   font-size: 0.8rem;
  }
@@ -808,9 +809,7 @@ font-size: 3rem;
   display: none;
 }
 .starsimglanding{
-  position: absolute;
-  top: 122rem;
-  left: 12vw;
+  top: 114rem;
 } 
 
 .landing-section-2-container{
@@ -821,6 +820,9 @@ font-size: 3rem;
 @media screen and (max-width: 375px) {
   .landing-section-2-container{
     background-size:300%; 
+  }
+  .keepscrollimg {
+    top:47.5vh;
   }
 
 }
@@ -837,27 +839,26 @@ font-size: 3rem;
     text-align: left;
     font-size: 1.8rem;
     font-weight: 400;
-    width: 90vw;
+    width: 70vw;
     margin-bottom: 2vh;
   }
   .keepscrollimg {
-    position: relative;
-    top:0vh;
-    left: 0vw;
-    width:100%;
-    margin-top: 2vh;
-    z-index: 100;
+    top: 45vh;
   }
   .lookinat{
     position: relative;
-    top: 70vh;
+    top: 80vh;
     left:50vw;
     width:45vw;
     margin-top: 2vh;
     z-index: 100;
   }
+  .starsimglanding{
+    top: 114rem;
+  } 
+  
   .landing-main-Info  h2 {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
   .arrowimg {
     display: none;
@@ -867,7 +868,7 @@ font-size: 3rem;
   width: 100vw;
   margin-top: 5vh;
 }
-  .landing-button, .landing-section-1-button {
+  /* .landing-button, .landing-section-1-button {
     height: 8vh;
     width: 80%;
     margin: 0;
@@ -880,8 +881,8 @@ font-size: 3rem;
     font-weight: 600;
     border-radius: 17.4rem;
     border: 0;
-  }
-.landing-section-3-container, .landing-section-3 {
+  } */
+/* .landing-section-3-container, .landing-section-3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -890,10 +891,10 @@ font-size: 3rem;
   width:100%;
   margin-top: -10vh;
  height:70vh;
-}
-.landing-section-3-content {
+} */
+/* .landing-section-3-content {
   margin-top: 10rem;
-}
+} */
 .landing-section-1-info h1 {
   width: 80vw;
   font-size: 1.8rem;
