--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -1,8 +1,11 @@
-
+.landing-container {
+  margin: 0;
+  padding: 0;
+}
 /* Landing Section 1 Styles */
 .landing {
   height: 100vh;
- width: 100%;
+ width: 100vw;
   margin: 0;
   padding: 0;
   margin-top: -10vh;
@@ -12,7 +15,7 @@
   border-bottom-left-radius: 5vh;
   border-bottom-right-radius: 5vh;
   align-items: center;
-  position: relative; /* Add position relative to the parent container */
+  position: relative; 
   background-image: url(https://live.staticflickr.com/65535/53096318282_6b017fa4e9_h.jpg);
   background-size: cover;
   background-position: center;
@@ -21,14 +24,7 @@
   
 
 }
-/* .landingContainer {
-  max-width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-} */
+
 
 .landing-section-1-content {
   display: flex;
@@ -54,9 +50,9 @@ margin-top: 10vh;
   z-index: 0;
 } */
 
-/* Landing Section 2 Styles */
+/* Landing Section 1 Styles */
 .landing-section-1-container {
-  width: 100%;
+  width:100vw;
   height: 130vh;
   margin: 0;
   margin-top: -10vh;
@@ -71,7 +67,7 @@ margin-top: 10vh;
 
 /* Landing Section 2 Styles */
 .landing-section-2-container {
-  width: 100%;
+  width:100vw;
   min-height: 100vh;
   margin-top: -10vh;
   background-color: var(--light-blue);
@@ -89,7 +85,7 @@ margin-top: 10vh;
 
 /* Landing Section 3 Styles */
 .landingSubOuter3 {
-  width: 100%;
+  width:100vw;
   height: 130vh;
   margin-top: -40vh;
   background-color: var(--background-offwhite);
@@ -101,7 +97,7 @@ margin-top: 10vh;
 
 /* Landing Section 4 Styles */
 .landing-section-3 {
-  width: 100%;
+  width:100vw;
   height: 100vh;
   margin-top: -20vh;
   background-color: var(--main-blue);
@@ -138,21 +134,21 @@ margin-top: 10vh;
   margin: 0;
   padding: 0;
   height: 20vh;
-  transform: translate(-50%, -50%); /* Center the image both vertically and horizontally */
+  transform: translate(-50%, -50%); 
   rotate: 10deg;
   z-index: 10; 
   filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
 
 }
 .arrowimg {
-  position: relative; /* Use fixed positioning to keep it in a fixed position on the screen */
-  top:2vh; /* Adjust the top position to place it vertically */
-  left: -2vh; /* Adjust the left position to place it horizontally */
+  position: relative; 
+  top:2vh; 
+  left: -2vh;
   margin: 0;
   rotate: -20deg;
   padding: 0;
   height: 15vh;
-  transform: translate(-50%, -50%); /* Center the image both vertically and horizontally */
+  transform: translate(-50%, -50%); 
   z-index: 100; 
   filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
 
@@ -212,34 +208,13 @@ border-radius:30px ;
 margin: 0;
 }
 
-/* Food Types Styles */
-.foodTypes {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-top: 45vh;
-}
-
-/* Food Type Container Styles */
-.foodTypeContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  overflow-x: auto;
-  margin-right: 10px; /* Adjust the margin as needed */
-  /* You can add more styling as needed for individual foodType divs */
-}
-
 
 /* Landing Info Styles */
 .landing-main-Info {
-  position: absolute; /* Use absolute positioning to overlay the image */
+  position: absolute;
   top: 50%;
   left: 70%;
-  transform: translate(-50%, -50%); /* Center the landing info container */
+  transform: translate(-50%, -50%); 
   padding: 20px;
   border-radius: 10px;
   display: flex;
@@ -330,7 +305,7 @@ color: #ffffff;
 
 /* Input Button Styles */
 .landing-section-3-input-container button {
-  background-color: var(--main-blue); /* Change this to your desired button style */
+  background-color: var(--main-blue); 
   color: #fff;
   padding: 10px;
   margin-left: -12.4vw;
@@ -868,33 +843,7 @@ font-size: 3rem;
   width: 100vw;
   margin-top: 5vh;
 }
-  /* .landing-button, .landing-section-1-button {
-    height: 8vh;
-    width: 80%;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-size: 1.2rem;
-    font-weight: 600;
-    border-radius: 17.4rem;
-    border: 0;
-  } */
-/* .landing-section-3-container, .landing-section-3 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  width:100%;
-  margin-top: -10vh;
- height:70vh;
-} */
-/* .landing-section-3-content {
-  margin-top: 10rem;
-} */
+
 .landing-section-1-info h1 {
   width: 80vw;
   font-size: 1.8rem;
