--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,6 +1,6 @@
 .profile {
   margin: 0 auto;
-  height: 90vh;
+  height: 110vh;
   width: 100vw;
   margin: 0;
   padding: 0;
@@ -13,24 +13,15 @@
   color: #000;
   
 }
-html {
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-  padding: 0;
-}
+
 
 .maindashboard {
   display: flex;
-  justify-content: center; /* Horizontally center the content */
-  align-items: flex-start; /* Vertically center the content */
-  height: 90vh; /* Adjust the height as needed */
   width:100%;
-  margin: 0;
 }
 
 .dashboardleft {
-  text-align: center; /* Center the text inside dashboardleft */
+  text-align: center; 
 }
 .dashboardright, .dashboardleft {
   display: flex;
@@ -80,8 +71,8 @@ margin-top: 15vh;
 /* Style for dog and order button containers */
 .dog-button-container,
 .order-button-container {
-  flex: 0; /* Prevent button containers from growing */
-  margin-left: 10px; /* Add some space between data and buttons */
+  flex: 0; 
+  margin-left: 10px; 
 }
 
 .dashboardright button {
